--- a/app.env
+++ b/app.env
@@ -1,5 +1,6 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:123456@localhost:5432/travor-backend?sslmode=disable
+DB_SOURCE=postgres://gsjnfegy:A32BXqJwidzvfooavwHdGjY_W2zkbUTC@satao.db.elephantsql.com/gsjnfegy
+# DB_SOURCE=postgres://gsjnfegy:A32BXqJwidzvfooavwHdGjY_W2zkbUTC@satao.db.elephantsql.com/gsjnfegy
 SERVER_ADDRESS=0.0.0.0:8088
 TOKEN_SYMMETRIC_KEY=ee85de7aae77292fc4b9d2dd6f51ae42
 ACCESS_TOKEN_DURATION=2h
