--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:123456@localhost:5432/travor-backend?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8088
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=ee85de7aae77292fc4b9d2dd6f51ae42
 ACCESS_TOKEN_DURATION=2h
 REFRESH_TOKEN_DURATION=48h
