seperate database for each service

--- a/app.env
+++ b/app.env
@@ -1,5 +1,7 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:123456@localhost:5432/travor-backend?sslmode=disable
+DB_URL=postgresql://dreon:kI4X2bGP-O2pUPK5VUtdsQ@travor-db-5271.8nk.cockroachlabs.cloud:26257/
+
 SERVER_ADDRESS=0.0.0.0:8088
 GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=ee85de7aae77292fc4b9d2dd6f51ae42
