--- a/app.env
+++ b/app.env
@@ -3,6 +3,8 @@ DB_SOURCE=postgresql://root:123456@localhost:5432/travor-backend?sslmode=disable
 DB_URL=postgresql://dreon:kI4X2bGP-O2pUPK5VUtdsQ@travor-db-5271.8nk.cockroachlabs.cloud:26257/
 
 REDIS_URL=localhost:6379
+REDIS_PASSWORD=
+REDIS_USERNAME=
 
 SERVER_ADDRESS=0.0.0.0:8088
 GRPC_SERVER_ADDRESS=0.0.0.0:9090
