--- a/app.env
+++ b/app.env
@@ -6,8 +6,8 @@ REDIS_URL=localhost:6379
 REDIS_PASSWORD=
 REDIS_USERNAME=
 
-SERVER_ADDRESS=0.0.0.0:8088
-GRPC_SERVER_ADDRESS=0.0.0.0:9090
+SERVER_ADDRESS=:8088
+GRPC_SERVER_ADDRESS=:9090
 TOKEN_SYMMETRIC_KEY=ee85de7aae77292fc4b9d2dd6f51ae42
 
 ACCESS_TOKEN_DURATION=2h
